--- a/quiz/src/index.css
+++ b/quiz/src/index.css
@@ -3,5 +3,35 @@
   margin: 0;
   font-family: "Raleway", sans-serif;
   box-sizing: border-box;
+  color: white;
 }
 
+html, body {
+  min-height: 100vh;
+  height: 100%;
+  background-color: #1c1c1c;
+}
+
+img {
+  max-width: 100%;
+  object-fit: cover;
+}
+
+button {
+  font-weight: bold;
+  font-size: 1.2rem;
+  cursor: pointer;
+  padding: .8rem 1.5rem;
+  background: linear-gradient(90deg, rgba(132, 53, 222, 1) 0%, rgba(184, 84, 232, 1) 100%);
+  border-radius: 3rem;
+  border: none;
+}
+
+button:hover {
+  background: linear-gradient(90deg,rgba(184, 84, 232, 1) 100%, rgba(132, 53, 222, 1) 0%);
+}
+@media(width <= 320px) {
+  html {
+    font-size: 77%;
+  }
+}
