--- a/quiz/src/App.css
+++ b/quiz/src/App.css
@@ -1,6 +1,7 @@
 .app {
     text-align: center;
     padding-top: 2rem;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
