--- a/quiz/src/components/GameOver.css
+++ b/quiz/src/components/GameOver.css
@@ -1,7 +1,6 @@
 #gameover {
     text-align: center;
     max-width: 500px;
-    /* margin: 0 auto; */
     display: flex;
     flex-direction: column;
 }
@@ -14,9 +13,9 @@
 #gameover p {    
     color: #8435de;
 }
+
 #gameover img {
-    margin-bottom: 2rem;
+    margin: 2rem;
     height: 200px;
-    margin: 0 auto;
 }
 
