--- a/quiz/src/components/Option.css
+++ b/quiz/src/components/Option.css
@@ -1,8 +1,8 @@
 .option {
     background-color: #3c0e70;
     border-radius: .5rem;
-    padding: 1rem;
     margin-bottom: .5rem;
+    padding: 5px;
     cursor: pointer;
     opacity: .8;
     transition: .4s;
@@ -11,7 +11,3 @@
 .option:hover {
     opacity: 1;
 }
-
-/* #options-container .option p {
-    margin-bottom: 0;
-} */
