--- a/quiz/src/components/Option.css
+++ b/quiz/src/components/Option.css
@@ -11,3 +11,13 @@
 .option:hover {
     opacity: 1;
 }
+
+.correct {
+    background-color: #0bfc03;
+    font-weight: bolder;
+}
+
+.wrong {
+    background-color: #3c0e70;
+    opacity: .4;
+}
